# cpp_final_task

./: .gitignore  C++ 최종 프로젝트 결과 보고서.docx  CMakeLists.txt  ColorManager.cpp  ColorManager.hpp  ColorManagerTest.cpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameMapTest.cpp  GameTest.cpp  GateManagerTest.cpp  Item.cpp  Item.hpp  ItemManager.cpp  ItemManagerTest.cpp  ItemTest.cpp  Mission.hpp  MissionManagerTest.cpp  MissionTest.cpp  README.md  ScoreManager.cpp  ScoreManager.hpp  ScoreManagerTest.cpp  Snake.cpp  Snake.hpp  SnakeTest.cpp  Stage.cpp  Stage.hpp  TemporaryWall.cpp  TemporaryWallManagerTest.cpp  main.cpp  main_game.cpp  ~$+ 최종 프로젝트 결과 보고서.docx
.cursor/rules/: snakegamerule.mdc
include/core/: Game.hpp  GameMap.hpp
include/entities/: Gate.hpp  Snake.hpp  TemporaryWall.hpp
include/game/: MissionManager.hpp  StageManager.hpp
include/managers/: GateManager.hpp  ItemManager.hpp  TemporaryWallManager.hpp
src/core/: Game.cpp
src/entities/: Gate.cpp  Snake.cpp
src/game/: Mission.cpp  MissionManager.cpp  StageManager.cpp
src/managers/: GateManager.cpp  ItemManager.cpp  ScoreManager.cpp  TemporaryWallManager.cpp
tests/: GameTest.cpp  GateTest.cpp  ItemManagerTest.cpp  StageManagerTest.cpp  StageTest.cpp  TemporaryWallTest.cpp
